# pocketbase_orm

./: .gitignore  README.md  agent.md  justfile  pocketbase_orm.py  pyproject.toml
.github/workflows/: create-release.yml  format.yml  tests.yml  typing.yml
scripts/: install-pocketbase.sh  seed-pocketbase.sh
tests/: conftest.py  test_collections.py  test_file_max_size.py  test_file_select_options.py  test_json_schema_extra_generic.py  test_pocketbase_orm.py  test_reference_variants.py
tests/fixtures/: pocketbase_setup.py
