[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

[project]
dependencies = [
  # "pocketbase @ git+https://github.com/44ai-labs/pocketbase.git@update-collection-fields",
  # "pocketbase-async",
  "pocketbase-async @ git+https://github.com/44ai-labs/pocketbase-async@add-batch-support",
  "pydantic[email]>=2.10.6",
]
description = "An ORM for PocketBase based on Pydantic"
dynamic = ["version"]
license = {file = "LICENSE"}
name = "pocketbase-orm"
readme = "README.md"
requires-python = ">=3.11"

[dependency-groups]
dev = [
  "pytest>=8.3.4",
  "pytest-asyncio>=0.26.0",
]
